[metadata]
name = pyqualys
version = 0.0.1
author = Austin de Coup-Crank
author_email = austin.decoupcrank@moodys.com
description = Module for interacting with the Qualys API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/decoupca-moodys/pyqualys
project_urls =
    Bug Tracker = https://github.com/decoupca-moodys/pyqualys/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
