[metadata]
name = qualys
version = 0.0.1
author = Austin de Coup-Crank
author_email = austindcc@gmail.com
description = Module for interacting with the Qualys API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/decoupca/qualys-python
project_urls =
    Bug Tracker = https://github.com/decoupca/qualys-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
